src/tests/testfiles/function-declarations/5.txt
testfiles/function-declarations/5.c:4:1: error: Function definition parameters don't match with previous declaration
int f(int a, float b) {
^
